--- a/src/components/gallery/imageThumbnail/imageThumbnail.css
+++ b/src/components/gallery/imageThumbnail/imageThumbnail.css
@@ -1,6 +1,8 @@
 /*1.2. При наведении мышью на картинку, поверх неё должна появляться кнопка «Подробнее»
 и совершаться переход на отдельную страницу о подробностях картинки (описание см. ниже).*/
-
+.image-thumbnail{
+    min-width: 150px;
+}
 .image-thumbnail:hover{
     background-color: #d5d5d5;
 }
